# scribe

./: .deployment_info.json  .env.example  .env.template  .funcignore  .gitignore  ARCHITECTURE_MIGRATION_COMPLETE.md  CLAUDE.md  DEPLOYMENT_PLAN.md  Dockerfile  FINAL_CODEBASE_REVIEW.md  README.md  TESTING_OPTIMIZATION_PLAN.md  alembic.ini  azure.yaml  check_sessions.py  code_review_summary.md  docker-compose.yml  function_app.py  host.json  main.py  pyproject.toml  pytest.ini  refresh_token_and_test.py  requirements-dev.txt  requirements-local.txt  requirements.txt  run_tests.py  scribe_app.py  settings.toml  summary.md  test_complete_inbox_workflow.py  test_inbox_simple.py  workflow.md
.claude/: CLAUDE.md  claude_desktop_config.json  settings.local.json
ProcessEmails/: __init__.py  function.json
app/: __init__.py  main.py
app/api/: __init__.py
app/azure/: AzureAIFoundryService.py  AzureAuthService.py  AzureBlobService.py  AzureDatabaseService.py  AzureGraphService.py  (+3 more)
docs/: API_REFERENCE.md  ARCHITECTURE_UPDATES.md  AUTHENTICATION_IMPLEMENTATION_COMPLETE.md  CLAUDE.md  CONFIGURATION.md  DEPLOYMENT.md  DEPLOYMENT_PLAN.md  E2E_TEST_GUIDE.md  EXCEL_LAYOUT_CHANGES.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_COMPLETE.md  MODULAR_ARCHITECTURE.md  PRODUCTION_ISSUES_ANALYSIS.md  PROJECT_STRUCTURE.md  README.md  SCRIBE_WORKFLOW_SUCCESS.md  SENIOR_ENGINEER_CODE_REVIEW.md  TEST_SUMMARY.md
infra/: main.bicep  main.parameters.json
scripts/: analyze_audio.py  check_voice_file.py  create_excel_file.py  create_onedrive_file.py  debug_converted_audio.py  deploy.py  deploy_production.py  diagnose_services.py  generate_oauth_tokens.py  get_new_token.py  oauth_refresh.py  redeploy.py  refresh_tokens.py  verify_onedrive.py
src/: __init__.py  azure_foundry_processor_class.py  azure_foundry_processor_functions.py  email_processor_class.py  email_processor_functions.py  excel_processor_class.py  excel_processor_functions.py  key_vault_manager.py
static/: index.html
tests/: CLAUDE.md  TASKS.md  __init__.py  conftest.py  run_e2e_test.py  run_tests.py  settings.test.toml  test_audio_analysis.py  test_auth_system.py  test_azure_foundry_processor.py  test_category_organization.py  test_comprehensive.py  test_email_processor.py  test_excel_processor.py  test_folder_organization.py  test_local_processing.py  test_production_workflow.py  test_python_conversion.py  test_scribe.xlsx  test_smart_detection.py  test_transcription_processor.py  test_workflow_orchestrator.py
(+219 files in other folders)
